crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__repeated_resizes_prints_fill_gap.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: after
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ scroll line 01
~ scroll line 02
~ scroll line 03
~ word01 word02 word03 word04 word05 word06 word07 word08 word09 word10 word11 wor
~ d12 word13 word14 word15 word16 word17 word18
~ 
~ 
~ 
~ 
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│printed after width dance 1                                                     │
│printed after width dance 2                                                     │
│printed after width dance 3                                                     │
│                                                                                │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=9 col=1
