crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__resize_race_vertical_after.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ scroll line 01
~ scroll line 02
~ scroll line 03
~ scroll line 04
~ scroll line 05
~ scroll line 06
~ scroll line 07
~ scroll line 08
┌────────────────────────────────────────────────────────────────────────────────┐
│printed during resize race                                                      │
│printed after race settled                                                      │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=5 col=1
