crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__session_picker_open.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│Existing sessions found, /load or Ctrl+L to load.                               │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│ Session number 8                          idle    8000tok  2025-01-08T00:00:00Z│
│ Session number 7                          idle    7000tok  2025-01-07T00:00:00Z│
│ Session number 6                          idle    6000tok  2025-01-06T00:00:00Z│
│ Session number 5                          idle    5000tok  2025-01-05T00:00:00Z│
│ Session number 4                          idle    4000tok  2025-01-04T00:00:00Z│
│                                                                                │
│↑↓ navigate  enter select  esc cancel                            0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=79 (hidden)
