crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__tool_spinner_80.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> run a long command                                                            │
│◆ execute_command(cargo build --workspace --all-targets --verbose --verbose --ve│
│rbose --verbose --verbose)                                                      │
│                                                                                │
│██████████ waiting for tool call result                                         │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                                  0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=1
